2006-01-27  Bernhard Kraft  <kraftb@kraftb.at>

	* Fixed bug #760: "gifbuilder jpgs are 256 colors" for enabling truecolor pngs set [GFX][png_truecolor] variable (reduceColors still gets respected)

2005-01-30  Michael Stucki  <michael@typo3.org>

	* Added two hooks to class.t3lib_tceforms.php, getMainFieldsClass: getMainFields_preProcess and getMainFields_postProcess (requested by Thomas Hempel for use with the "dynaflex" extension.
	* Fixed gremlin #1628: Removed "Text with image below" from the content wizard
	* Some cleanup to indexed_search: Removed the TypoScript property "tableParams" which is not used anymore.
	* Replaced the function "procesWordsInArray" with its correctly spelled pendant. The old function remains as a wrapper but is going to be removed sooner or later.
	* Fixed non-working clearing of indexed_search page-hashes when the list of phashes caused an oversized URL
	* Removed hardcoded maximum size of popup images

2005-01-29  Michael Stucki  <michael@typo3.org>

	* Added UTF8-support for emails. Thanks to Bernhard Kraft, Stanislas Rolland and Martin Kutschker for their feedback.
	* Changes in t3lib_div::plainMailEncoded(): By default, emails will be encoded to quoted-printable.
	* Email linebreaks are now "\n" except on Windows, where they are "\r\n". Thanks to Stanislas and Martin for their feedback.
	* t3lib_formmail now encodes emails as quoted-printable. base64 needs to be enabled explicitely.
	* Install Tool now uses t3lib_div::plainMailEncoded() instead of mail() to send plain test mails.
	* Install Tool now displays warning messages using t3lib_div::debug() instead of debug() which does not work in all cases.
	* Marked t3lib_htmlmail->convertName() as deprecated because header lines are now encoded automatically.

2005-01-28  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #2382: error when creating a new (and empty) file in BE
	* Fixed bug #1878: protect localconf.php from being lost on write error