@@ -1,3 +1,7 @@
+2006-01-31  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
+	
+	* t3lib_htmlmail: make email message-id compliant with RFC 2822.
+
 2006-01-27  Bernhard Kraft  <kraftb@kraftb.at>
 
 	* Fixed bug #760: "gifbuilder jpgs are 256 colors" for enabling truecolor pngs set [GFX][png_truecolor] variable (reduceColors still gets respected)
